# smk

./: .astylerc  .clang-format  .gitignore  Makefile  README.md  flake.nix  meson.build  meson.options
.github/workflows/: build.yml
docs/: nuphy-air60.md  smk.md
docs/keyboards/: eyooso-a68.md  eyooso-z11.md  nuphy-air60.md  redragon-k630-norgb.md  royalkludge-rk61.md
src/: clock.c  clock.h  debug.h  delay.c  delay.h  gpio.c  gpio.h  host.c  indicators.h  isp.c  isp.h  keyboard.c  keyboard.h  keycodes.h  layout.c  layout.h  ldo.c  ldo.h  main.c  matrix.c  matrix.h  preboot.asm  pwm.c  pwm.h  report.c  sh68f90a.h  uart.c  uart.h  usb.c  usbdef.h  usbhidreport.h  usbregs.h  utils.h  watchdog.h
src/kb/: kb.h  kb_init.c  kb_process_record.c  kb_update.c  kb_update_switches.c
src/keyboards/example/: kb.c  kbdef.h  smatrix.c  user_matrix.c
src/keyboards/example/layouts/default/: layout.c
src/keyboards/eyooso-a68/: kbdef.h
src/keyboards/eyooso-a68/layouts/default/: indicators.c  layout.c
src/keyboards/eyooso-z11/: kb.c  kbdef.h  user_init.c  user_matrix.c
src/keyboards/eyooso-z11/layouts/default/: indicators.c  layout.c
src/keyboards/nuphy-air60/: kb.c  kbdef.h  matrix.c  smatrix.c  user_init.c  user_keyboard.c  user_matrix.c
src/keyboards/nuphy-air60/layouts/default/: indicators.c  layout.c
src/keyboards/redragon-k630-norgb/: kbdef.h  user_init.c  user_matrix.c
src/keyboards/redragon-k630-norgb/layouts/default/: indicators.c  layout.c
src/keyboards/redragon-ryze/: kbdef.h  user_init.c  user_matrix.c
src/keyboards/redragon-ryze/layouts/default/: indicators.c  layout.c
src/keyboards/royalkludge-rk61/: kbdef.h  user_init.c  user_matrix.c
src/keyboards/royalkludge-rk61/layouts/default/: indicators.c  layout.c
src/lib/: indicators.c  layout.c
src/lib/sh68f90a/: delay.c  keyboard.c  pwm.c  uart.c  usb.c  usb.h
src/platform/: bb_spi.c  bb_spi.h
src/platform/bk3632/: rf_controller.c  rf_controller.h
src/platform/sh68f90a/: clock.c  clock.h  delay.c  delay.h  flash.c  flash.h  gpio.c  isp.c  isp.h  keyboard.c  ldo.c  ldo.h  pwm.c  pwm.h  sh68f90a.h  stack.c  stack.h  uart.c  uart.h  usb.c  usb.h  usbregs.h  watchdog.h
src/smk/: console.c  console.h  debug.h  host.c  host.h  keyboard.c  keyboard.h  keycodes.h  layout.h  matrix.c  matrix.h  report.c  report.h  settings.c  settings.h  usbdef.h  usbhidreport.h  utils.h
src/user/: indicators.c  indicators.h  indicators_post_update.c  indicators_pre_update.c  indicators_start.c  layout.c  layout.h  layout_process_record.c  matrix.h  user_init.c  user_init.h  user_layout.h  user_matrix.h
src/utils/: 8051_inc_error_hide.h
tests/: sim.py  test_boot.py  test_stack.py  test_usb.py  usbsim.py
tools/: smk-console.c
tools/ucsim/: sh68f90-usb-irq.patch  sim-get-descriptor.sh
utils/: checksum.c  led_geometry_gen.c
